templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    external-dns.alpha.kubernetes.io/hostname: app.internal.example.com
    alb.ingress.kubernetes.io/group.name: app-group
spec:
  ingressClassName: alb
  rules:
    - host: app.internal.example.com
      http:
        paths:
          - path: /javaapi/
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /nodeapi/
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /react-ui/
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
